# lynx

./: .gitignore  LICENSE  README.md  core-install.sh  docs.md  gen-certs.sh  info.txt  start.sh  todo.md
deploy/: .dockerignore  docker-compose.agent.yml  docker-compose.core.yml
deploy/db-data/: 01_schema.sql  03_admin.sql
lynx-agent/: Cargo.toml  Dockerfile  build.rs  config.toml
lynx-agent/proto/: monitor.proto
lynx-agent/src/: main.rs
lynx-agent/src/lib/: cache.rs  client.rs  collectors.rs  docker.rs  gpu.rs  mod.rs  system_info.rs  websocket.rs
lynx-agent/src/proto/: monitor.rs
lynx-ai/: script2.py
lynx-core/: .dockerignore  Cargo.toml  Dockerfile  build.rs
lynx-core/src/: cache.rs  config.rs  corelib.rs  db.rs  lib.rs  main.rs  notify.rs  queries.rs  retention.rs  tls.rs
lynx-core/src/lib/: notify.rs
lynx-core/src/notify/: components.rs  processor.rs  rules.rs  services.rs
lynx-core/src/proto/: monitor.rs
lynx-core/src/services/: agent.rs  ingest.rs  mod.rs  monitor.rs
lynx-core/tests/: cache_tests.rs  notify_tests.rs  tls_tests.rs
lynx-portal/: Dockerfile  drizzle.config.ts  index.html  package-lock.json  package.json  systems.html
lynx-portal/drizzle/: 0001_minor_titania.sql  0002_keen_pretty_boy.sql  relations.ts  schema.ts
lynx-portal/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
lynx-portal/js/: app.js
lynx-portal/src/: app.css  app.d.ts  hooks.server.ts
lynx-portal/src/lib/: ProgressBar.svelte
lynx-portal/src/lib/components/: AddServer.svelte  AlertSummary.svelte  CPUChart.svelte  CommandStream.svelte  LineChart.svelte  MiniLineChart.svelte  RadialChart.svelte  ServiceSettings.svelte  SystemStatusBadge.svelte
lynx-portal/src/lib/components/dashboard/: DashboardGrid.svelte  WidgetSidebar.svelte  types.ts
lynx-portal/src/lib/components/ui/button/: button.svelte
lynx-portal/src/lib/components/ui/chart/: chart-tooltip.svelte
lynx-portal/src/lib/components/ui/input/: input.svelte
lynx-portal/src/lib/server/: auth.ts  session.ts  user.ts
lynx-portal/src/lib/server/db/: bytea.ts  schema.ts
lynx-portal/src/lib/utils/: statusConfig.ts  systemUtils.ts
lynx-portal/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
lynx-portal/src/routes/2fa/: +page.server.ts  +page.svelte
lynx-portal/src/routes/2fa/setup/: +page.server.ts  +page.svelte
lynx-portal/src/routes/alerts/: +page.server.ts  +page.svelte  +server.ts
lynx-portal/src/routes/alerts/edit/[...path]/: +page.server.ts  +page.svelte  +server.ts
lynx-portal/src/routes/alerts/history/[...path]/: +page.server.ts  +page.svelte
lynx-portal/src/routes/alerts/new/: +page.server.ts  +page.svelte  +server.ts
lynx-portal/src/routes/api/containers/[id]/[action]/: +server.ts
lynx-portal/src/routes/login/: +page.server.ts  +page.svelte
lynx-portal/src/routes/logout/: +page.server.ts  +page.svelte
lynx-portal/src/routes/register/: +page.server.ts  +page.svelte
lynx-portal/src/routes/settings/: +page.server.ts  +page.svelte  +server.ts
lynx-portal/src/routes/setup/: +page.server.ts  +page.svelte
lynx-portal/src/routes/systems/: +page.svelte
lynx-portal/src/routes/systems/[...path]/: +page.server.ts  +page.svelte
lynx-portal/src/routes/systems/[...path]/alerts/: +page.server.ts  +page.svelte  +server.ts
lynx-portal/src/routes/systems/[...path]/alerts/history/: +page.server.ts  +page.svelte
lynx-portal/src/routes/systems/[...path]/containers/: +page.server.ts  +page.svelte
lynx-portal/src/routes/systems/[...path]/services/: +page.server.ts  +page.svelte
lynx-portal/styles/: main.css
lynx-proto/: monitor.proto
lynx-scripts/: requirements.txt  script2.py  stress-test.sh  tests.py
