[package]
name = "lynx-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.0", features = ["full"]}
tonic = "0.13.1" # gRPC framework
prost = "0.13.5" # Protobuf codegen
prost-types = "0.13.5"
serde = {version = "1.0", features = ["derive"]}
clap = { version = "4.0", features = ["derive"] } # CLI parsing
tonic-build = "0.13.1"
toml = "0.8.23"
sysinfo = "0.35.2"
systemstat = "0.2.4"
tracing = "0.1.41"
log = "0.4.27"
env_logger = "0.11.8"
dotenv = "0.15.0"

[build-dependencies]
prost-build = "0.13.5"
tonic-build = "0.13.1"
