[package]
name = "lynx-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.0", features = ["full"]}
tonic = "0.13.1" # gRPC framework
prost = "0.13.5" # Protobuf codegen
serde = {version = "1.0", features = ["derive"]}
tonic-build = "0.13.1"
toml = "0.8.23"
sysinfo = "0.35.2"
systemstat = "0.2.4"
log = "0.4.27"
env_logger = "0.11.8"
dotenv = "0.15.0"
tokio-tungstenite = "0.27.0"
futures-channel = "0.3.31"
futures-util = "0.3.31"
serde_json = "1.0.140"
[build-dependencies]
tonic-build = "0.13.1"
