[package]
name = "lynx-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.13.1", features = ["_tls-any"] } # gRPC framework
prost = "0.13.5" # Protobuf codegen
serde = { version = "1.0", features = ["derive"] }
tonic-build = "0.13.1"
toml = "0.8.23"
sysinfo = "0.35.2"
systemstat = "0.2.4"
log = "0.4.27"
env_logger = "0.11.8"
dotenv = "0.15.0"
tokio-tungstenite = "0.27.0"
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["sqlite", "chrono", "runtime-tokio"] }
futures-channel = "0.3.31"
futures-util = "0.3.31"
serde_json = "1.0.140"
rustls = "0.23.28"
lazy_static = "1.5.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
linfa = { version = "0.6.0", features = ["openblas-system"] }
smartcore = "0.4.2"
ndarray = "0.16.0"
bincode = { version = "2.0.0", features = ["serde"] }
linfa-trees = "0.7.0"
rand = "0.8.5"
extended-isolation-forest = "0.2.3"
thiserror = "2.0.12"
dashmap = "6.1.0"
systemctl = "0.5.0"
async-trait = "0.1.88"
[dev-dependencies]
console-subscriber = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.13.1"
